[package]
name = "lttng-ust"
version = "0.1.0"
authors = ["Reed Koser <srkoser+GitHub@gmail.com>"]
description = "Semi-automatically generate lttng-ust tracepoints"
categories = [ "external-ffi-bindings", "development-tools::ffi", "development-tools::tracing"]
readme = "README.md"

[dependencies]
bindgen = "0.32.3"
cc = "1.0"
