[package]
name = "lttng-ust-generate"
version = "0.1.1"
authors = ["Reed Koser <srkoser+GitHub@gmail.com>"]
description = "Semi-automatically generate lttng-ust tracepoints (generation code)"
categories = [ "external-ffi-bindings", "development-tools::ffi", "development-tools::profiling"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bobtwinkles/lttng-ust-rs/"

[dependencies]
bindgen = "0.32.3"
cc = "1.0"
