[package]
name = "lttng-ust"
version = "0.1.0"
authors = ["Reed Koser <srkoser+GitHub@gmail.com>"]
description = "Semi-automatically generate lttng-ust tracepoints (client code)"
categories = [ "external-ffi-bindings", "development-tools::ffi", "development-tools::profiling"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bobtwinkles/lttng-ust-rs/"

[dependencies]
